--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <group android:checkableBehavior="single"
+    <group
         android:id="@+id/group1">
         <item
             android:id="@+id/action_login_or_register"
@@ -19,7 +19,7 @@
             app:showAsAction="ifRoom"/>
     </group>
 
-    <group android:checkableBehavior="single"
+    <group
         android:id="@+id/group2">
         <item
             android:id="@+id/action_domestic"
@@ -85,7 +85,7 @@
             app:showAsAction="ifRoom"/>
     </group>
 
-    <group android:checkableBehavior="single"
+    <group
         android:id="@+id/group3">
         <item
             android:id="@+id/action_share"
