--- a/app/src/main/res/layout/progressbar.xml
+++ b/app/src/main/res/layout/progressbar.xml
@@ -12,7 +12,7 @@
         android:visibility="visible" />
 
     <WebView
-        android:id="@+id/web_engine"
+        android:id="@+id/webView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_alignParentLeft="true"
