--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -83,6 +83,13 @@
             android:title="@string/magazine"
             android:itemBackground="@color/aqua"
             app:showAsAction="ifRoom"/>
+
+        <item
+            android:id="@+id/action_vedio"
+            android:orderInCategory="100"
+            android:title="@string/vedio"
+            android:itemBackground="@color/aqua"
+            app:showAsAction="ifRoom"/>
     </group>
 
     <group
