--- a/app/src/main/res/layout/tab_activity.xml
+++ b/app/src/main/res/layout/tab_activity.xml
@@ -2,10 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="tech.japan.news.messagecardview.activity.MainActivity">
+
 
     <android.support.v7.widget.Toolbar
     android:id="@+id/tab_activity_toolbar"
@@ -20,19 +20,24 @@
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     />
 
+
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
-        app:tabMode="fixed"
-        android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:elevation="6dp"
-        app:tabTextColor="#d3d3d3"
-        app:tabSelectedTextColor="#ffffff"
-        app:tabIndicatorColor="#ff00ff"
-        android:minHeight="?attr/actionBarSize"
-        />
+        app:tabMode="scrollable"
+        app:tabGravity="fill"
+        android:layout_below="@+id/tab_activity_toolbar"/>
+    <!--app:tabMode="fixed"
+    android:layout_below="@+id/toolbar"
+    android:background="?attr/colorPrimary"
+    android:elevation="6dp"
+    app:tabTextColor="#d3d3d3"
+    app:tabSelectedTextColor="#ffffff"
+    app:tabIndicatorColor="#ff00ff"
+    android:minHeight="?attr/actionBarSize"
+    -->
+
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
