--- a/app/src/main/res/layout/register_layout.xml
+++ b/app/src/main/res/layout/register_layout.xml
@@ -2,7 +2,8 @@
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
-android:orientation="vertical">
+android:orientation="vertical"
+    android:weightSum="1">
 
 
     <TextView
@@ -103,7 +104,7 @@ android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="61dp"
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:orientation="horizontal">
@@ -120,12 +121,6 @@ android:orientation="vertical">
             android:layout_height="wrap_content"
             android:text="@string/cancel" />
     </LinearLayout>
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Button" />
 
 
 </LinearLayout>
