add rate dialog

--- a/app/src/main/res/layout/forgot_password.xml
+++ b/app/src/main/res/layout/forgot_password.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="320dp"
-    android:layout_height="320dp">
+    android:layout_width="300dp"
+    android:layout_height="fill_parent">
 
     <TextView
         android:id="@+id/forgot_tv_email"
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dip"
         android:gravity="center"
-        android:textColor="#000000"
+        style="@style/MyBlueTheme"
         android:text="@string/email"
         />
 
@@ -23,28 +23,15 @@
         android:textColorHint="@color/white"
         android:inputType="textEmailAddress" />
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="87dp"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_marginTop="30dp">
-
         <Button
             android:id="@+id/forgot_send_btn"
+            style="@style/appiratorButton"
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/send" />
+            android:text="@string/send"
+            android:layout_marginBottom="10dp"/>
 
-        <Button
-            android:id="@+id/btn_forgot_cancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/cancel" />
-    </LinearLayout>
 
 
 </LinearLayout>
