--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -1,18 +1,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="320dp"
-android:layout_height="320dp"
+android:layout_height="fill_parent"
 android:orientation="vertical" >
 
 
         <TextView
             android:id="@+id/login_tv_username"
+            style="@style/MyBlueTheme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dip"
             android:gravity="center"
-            android:text="@string/username"
-            android:textColor="#000000" />
+            android:text="@string/username"/>
 
         <EditText
             android:id="@+id/login_et_username"
@@ -25,12 +25,12 @@ android:orientation="vertical" >
 
         <TextView
             android:id="@+id/login_tv_password"
+            style="@style/MyBlueTheme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dip"
             android:gravity="center"
-            android:text="@string/password"
-            android:textColor="#000000" />
+            android:text="@string/password"/>
 
         <EditText
             android:id="@+id/login_et_password"
@@ -42,33 +42,23 @@ android:orientation="vertical" >
             android:inputType="textPassword" />
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="20dip">
-
         <Button
             android:id="@+id/loginButton"
+            style="@style/appiratorButton"
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="@string/login" />
 
-        <Button
-            android:id="@+id/btn_login_cancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/cancel" />
-    </LinearLayout>
 
 
     <Button
         android:id="@+id/login_forgot_password_btn"
+        style="@style/appiratorButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
-        android:text="@string/forgot_password" />
+        android:text="@string/forgot_password"
+        android:layout_marginBottom="10dp"/>
 </LinearLayout>
