--- a/app/src/main/res/layout/login_or_register.xml
+++ b/app/src/main/res/layout/login_or_register.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="320dp"
-    android:layout_height="320dp"
+    android:layout_width="300dp"
+    android:layout_height="fill_parent"
     android:orientation="vertical">
 
     <TextView
@@ -14,6 +14,7 @@
 
     <Button
         android:id="@+id/btn_register"
+        style="@style/appiratorButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -30,17 +31,12 @@
 
     <Button
         android:id="@+id/btn_login"
+        style="@style/appiratorButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:text="@string/login" />
+        android:text="@string/login"
+        android:layout_marginBottom="10dp"/>
 
-    <Button
-        android:id="@+id/btn_login_register_cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:text="@string/cancel" />
 </LinearLayout>
