--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,5 +21,17 @@
 
     </style>
 
+    <style name="appiratorButton" parent="android:Widget.Button">
+        <item name="android:background">@drawable/button_appirator</item>
+        <item name="android:textColor">@color/appirator_button_text_color</item>
+    </style>
+
+    <style name="MyBlueTheme" parent="android:Theme.Light">
+        <item name="android:textAppearance">@style/MyBlueTextAppearance</item>
+    </style>
+    <style name="MyBlueTextAppearance" parent="@android:style/TextAppearance">
+        <item name="android:textColor">#303F9F</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 
 </resources>
